# metadata-wrapper

./: .gitignore  Anchor.toml  package.json
programs/metadata_wrapper/: Cargo.toml
programs/metadata_wrapper/src/: context.rs  lib.rs
programs/metadata_wrapper/src/instructions/: create_master_edition.rs  create_metadata.rs  mod.rs  sign_metadata.rs  update_metadata.rs
sdk/: .gitignore  package.json
sdk/src/: index.ts  metadata-wrapper.client.ts
sdk/src/common/: account-utils.ts  constant.ts  index.ts  metadata.ts  node-wallet.ts  types.ts  util.ts
sdk/src/types/: metadata_wrapper.ts
tests/: metadata_wrapper.tests.ts  util.ts
tests/_keypair/: test.json
tests/types/: metadata_wrapper.json  metadata_wrapper.ts
