[package]
name = "metadata-wrapper"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "metadata_wrapper"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = "0.20.1"
mpl-token-metadata = { version = "1.2.2", features = ["no-entrypoint"] }
spl-token = { version="3.1.1", features = [ "no-entrypoint" ] }
spl-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }
solana-program = "^1.7.11"
borsh = "0.9.1"